# PML_cartoonset

./: .gitignore  README.md  REPORT.md  dataset.py  dataset100k.py  diffusion.py  evaluate.py  evaluate100k.py  generate_interactive.ipynb  model.py  plot_results.py  pyproject.toml  report.md  run_all_tests.py  sample.py  train.py  train100k.py  train_upscaler.py  upscale.py
configs/: debug.yaml  eval_100k.yaml  eval_10k.yaml  train_100k.yaml  train_10k_40k.yaml  train_upscaler_96.yaml
docs/: report.md
notebooks/: generate_interactive.ipynb
results/: run100k_diversity.csv  run100k_diversity.json  run100k_fidelity.csv  run100k_fidelity.json  run100k_variance.csv  run100k_variance.json  run_10k_diversity.csv  run_10k_fidelity.csv  run_10k_fidelity.json  run_10k_loss.csv  run_10k_variance.csv  run_full_40k_ddim_fidelity.csv  run_full_40k_ddim_fidelity.json  run_full_40k_ddpm_fidelity.csv  run_full_40k_ddpm_fidelity.json  run_full_40k_diversity.json  run_full_40k_loss_profile.csv  run_full_40k_variance.json  training_test_fidelity.csv  training_test_fidelity.json
scripts/: evaluate.py  evaluate100k.py  plot_results.py  run_all_tests.py  sample.py  train.py  train100k.py  train_upscaler.py  upscale.py
src/cartoon_diffusion/: __init__.py  checkpoints.py  classifier.py  config.py  data.py  diffusion.py  evaluation.py  generation.py  metrics.py  model.py  plotting.py  results.py  sampling.py  training.py  upscaling.py
src/cartoon_diffusion/cli/: train.py  (+8 more)
tests/: test_cli_imports.py  test_config_run_dir.py  test_data.py  test_model_diffusion.py  test_results_plotting.py  test_upscaling.py
