[project]
name = "pml-cartoonset"
version = "0.1.0"
description = "Conditional DDPM with classifier-free guidance on Google Cartoon Set."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
cartoon-data = "cartoon_diffusion.cli.inspect_data:main"
cartoon-train = "cartoon_diffusion.cli.train:main"
cartoon-evaluate = "cartoon_diffusion.cli.evaluate:main"
cartoon-sample = "cartoon_diffusion.cli.sample_grid:main"
cartoon-plot = "cartoon_diffusion.cli.plot_results:main"
cartoon-run-tests = "cartoon_diffusion.cli.run_all_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartoon_diffusion"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
